# QPL

./: .gitignore  Anchor.toml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVNET_REPORT.md  LANDING_PAGE_OUTLINE.md  LAUNCH_COPY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  NEXT_STEPS.md  OPERATOR_ECONOMICS_ANALYSIS.md  OPERATOR_ONBOARDING.md  PHASE_4_POST_FIX_VERIFICATION.md  PROTOCOL_FLOWS.md  README.md  SECURITY.md  Security, Code, and Bloat Audit.md  THREAT_MODEL.md  The Node-Level Implementation Flaw.md  WHITEPAPER.md  deny.toml  docker-compose.testnet.yml  package.json  qpl security audit report v0.3.md  qpl security audit report.md  tsconfig.json
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security-audit.yml
benchmarks/: README.md
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: QPLFeeRouter.sol  QPLRegistry.sol  QPLStaking.sol
contracts/src/interfaces/: IQPLFeeRouter.sol  IQPLStaking.sol
contracts/test/: QPL.t.sol
crates/common/types/: Cargo.toml
crates/common/types/src/: lib.rs
crates/common/utils/: Cargo.toml
crates/common/utils/src/: lib.rs
crates/qpl-crypto/: Cargo.toml
crates/qpl-crypto/benches/: ml_dsa_bench.rs  ml_kem_bench.rs
crates/qpl-crypto/src/: algorithm.rs  hsm.rs  lib.rs  ml_dsa.rs  ml_kem.rs  vectors.rs
crates/qpl-crypto/tests/: hsm_pkcs11_tests.rs  ml_dsa_vectors.rs  ml_kem_vectors.rs  softhsm2.conf
crates/qpl-network/: Cargo.toml
crates/qpl-network/src/: coordination.rs  discovery.rs  errors.rs  fees.rs  lib.rs  operator.rs  protocol.rs  routing.rs  types.rs
crates/qpl-sdk/: Cargo.toml  build.rs
crates/qpl-sdk/src/: client.rs  config.rs  errors.rs  lib.rs
crates/qpl-sdk/src/services/: mod.rs  proving.rs  signing.rs
crates/qpl-stark-rollup/: Cargo.toml
crates/qpl-stark-rollup/benches/: settlement_bench.rs
crates/qpl-stark-rollup/src/: air.rs  crypto.rs  executor.rs  lib.rs  prover.rs  red_team_tests.rs  security.rs  trace.rs  types.rs  validium.rs  verifier.rs
experts/: ciso-security-officer.md  defi-cfo.md  defi-protocol-strategist.md  financial-projection-3yr.md  futard-io-financial-model.md  gtm-cmo-defi.md  pqc-cryptography-expert.md  stark-rollup-engineer.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ed25519_verify.rs  fuzz_mldsa_verify.rs  fuzz_mlkem_decapsulate.rs
programs/qpl-fee-router/: Cargo.toml
programs/qpl-fee-router/src/: lib.rs
programs/qpl-registry/: Cargo.toml
programs/qpl-registry/src/: lib.rs
programs/qpl-staking/: Cargo.toml
programs/qpl-staking/src/: lib.rs
proto/: qpl_coordination.proto  qpl_operator.proto  qpl_types.proto
scripts/: patch-elf-osabi.py  testnet-deploy.sh
services/qpl-node/: Cargo.toml  Dockerfile  qpl-node.toml
services/qpl-node/src/: auth.rs  config.rs  errors.rs  identity.rs  main.rs  rate_limit.rs  server.rs  state.rs  tls.rs
services/qpl-node/src/handlers/: fees.rs  mod.rs  proving.rs  signing.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/solana/: extended-test.ts  qpl-staking.ts  run-warp-tests.sh  testnet-smoke.ts  warp-test.ts
