[package]
name = "qpl-stark-rollup"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Native FRI-based zk-STARK rollup for Ligare (QPL). Implements quantum-secure settlement with Private Validium mode."
repository = "https://github.com/jnodes/sovereign-quantum-ledger"
authors = ["Ligare Contributors"]
homepage = "https://github.com/jnodes/sovereign-quantum-ledger"

[dependencies]
# STARK proof framework - FRI-based, no trusted setup
winterfell = "0.9"

# Post-quantum cryptography
qpl-crypto = { path = "../qpl-crypto" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Utilities
hex = "0.4"
log = "0.4"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "settlement_bench"
harness = false
