[package]
name = "qpl-staking"
version = "0.1.0"
edition = "2021"
description = "QPL operator staking program — collateral management, unbonding, and slashing on Solana"

[lib]
crate-type = ["cdylib", "lib"]
name = "qpl_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31"
anchor-spl = "0.31"
solana-security-txt = "1.1.3"

# Anchor programs are built standalone, not as part of the outer Cargo workspace.
[workspace]
