[package]
name = "qpl-node"
description = "QPL operator node — decentralized quantum-proof service provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[[bin]]
name = "qpl-node"
path = "src/main.rs"

[dependencies]
qpl-network = { path = "../../crates/qpl-network", version = "0.1.0" }
qpl-crypto = { path = "../../crates/qpl-crypto", version = "0.1.0" }
qpl-stark-rollup = { path = "../../crates/qpl-stark-rollup", version = "0.1.0" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
thiserror = "1"

# Security remediation deps (D-1, D-3, D-5, D-6)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring", "logging"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "0.26"
dashmap = "6"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
