[package]
name = "qpl-e2e-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
qpl-crypto = { path = "../../crates/qpl-crypto", version = "0.1.0" }
qpl-stark-rollup = { path = "../../crates/qpl-stark-rollup", version = "0.1.0" }
qpl-network = { path = "../../crates/qpl-network", version = "0.1.0" }
qpl-sdk = { path = "../../crates/qpl-sdk", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
