[package]
name = "sql-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Common types for QPL (Quantum Proof Layer)."
repository = "https://github.com/jnodes/sovereign-quantum-ledger"
authors = ["QPL Contributors"]
homepage = "https://github.com/jnodes/sovereign-quantum-ledger"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
hex = "0.4"
