[package]
name = "sql-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Common utilities for QPL (Quantum Proof Layer)."
repository = "https://github.com/jnodes/sovereign-quantum-ledger"
authors = ["QPL Contributors"]
homepage = "https://github.com/jnodes/sovereign-quantum-ledger"

[dependencies]
sql-types = { path = "../types", version = "0.1.0" }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
